5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1832_1647.log
== TEST (2019-06-13 18:06:27) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:22:40) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap[j]=ap[j]+1
		print(ap)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:40:45) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in x:
			y=0
			if{x[y]}>=70:
				y=y+1
				n=zeros(y, dtipe=int)
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:08) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if{x[y]}>=70:
				y=y+1
				n=zeros(y, dtipe=int)
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:21) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if{f[y]}>=70:
				y=y+1
				n=zeros(y, dtype=int)
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:40) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if{f[y]}>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:57) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if{f[y]}>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:30) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if({f[y]})>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:21) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
	for w in f:
		y=0
		if{f[y]}>=70:
			y=y+1
			n=zeros(y, dtype(int))
			print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:58) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if(f(y))>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:41) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			iff[y]>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
File "XXXX", line 11
    iff[y]>=70:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:53) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if(f[y]>)=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
File "XXXX", line 11
    if(f[y]>)=70:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:46:09) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
		for w in f:
			y=0
			if f[y]>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:27) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
		for w in f:
			y=0
			if f[y]>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
File "XXXX", line 9
    for w in f:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:34) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
		for w in f:
			y=0
			if f[y]>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
File "XXXX", line 9
    for w in f:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:35) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
		for w in f:
			y=0
			if f[y]>=70:
				y=y+1
				n=zeros(y, dtype(int))
				print(n)
-- ERROR:
File "XXXX", line 9
    for w in f:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:02) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
		print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:18) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:41) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- EXECUTION TIME:
0.799191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 14, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:47) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:54) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
ps=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- EXECUTION TIME:
0.939294
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 14, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:50:43) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:50:47) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- EXECUTION TIME:
0.8117
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 13, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:50:49) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- EXECUTION TIME:
2.07021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 13, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:50:49) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- EXECUTION TIME:
2.71195
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:50:52) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- EXECUTION TIME:
0.767117
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 13, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:30) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype(int))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:47) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:52:35) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[ap]>=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:52:51) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[ap]>=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:16) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[ap]>=70:
		y=y+1
		ps=zeros(y, dtype=int)
print(ps)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:52) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[ap]>=70:
		y=y+1
		ps=zeros(y, dtype=int)
		print(ps)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:00) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[ap]>=70:
		y=y+1
		ps=zeros(y, dtype=int)
		print(ps)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:18) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:26) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f[y]>=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:39) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if f>=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:59) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if (f>=70):
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:55:19) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if elemento >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:55:29) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if elemento >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.866952
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:55:45) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if elemento >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:02) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:18) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
1.05098
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:34) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
1.29485
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:35) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
1.92578
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:36) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
2.52093
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
4
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:37) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
5.04779
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
4
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:38) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
7.69115
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
4
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
3
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:39) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
7.46297
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
4
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
3
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:45) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:46) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
5.61208
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:47) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
4.5163
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
digite a frequencia dos alunos: 4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:47) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
3.68427
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:57:47) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
2.76433
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1832/1647/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:59:22) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=w
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:16) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:38) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=n*w
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:45) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=n*w
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:48) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=n+w
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:43) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:49) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- EXECUTION TIME:
0.82611
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
85
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
3
85
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 4
85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:53) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- EXECUTION TIME:
3.6779
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
digite a frequencia dos alunos: 1
70
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
digite a frequencia dos alunos: 4
85
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:54) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- EXECUTION TIME:
3.09048
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
digite a frequencia dos alunos: 3
85
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
digite a frequencia dos alunos: 4
85
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:54) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- EXECUTION TIME:
5.42789
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
digite a frequencia dos alunos: 1
70
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:54) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
n=zeros(y, dtype=int)
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=w
print(n)
-- EXECUTION TIME:
7.14138
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
digite a frequencia dos alunos: 4
85
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
digite a frequencia dos alunos: 1
70
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:02:08) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	y=0
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.825152
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:03:44) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=w+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:05:44) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:44) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.978552
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:49) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:10:54) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if w >=70:
		y=y+1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:10:56) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if w >=70:
		y=y+1
		
print(n)
-- EXECUTION TIME:
0.683655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 11, in <module>
    if w >=70:
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:10:57) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if w >=70:
		y=y+1
		
print(n)
-- EXECUTION TIME:
2.28054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 11, in <module>
    if w >=70:
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:17) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:18) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- EXECUTION TIME:
0.577758
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 12
    print(n)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:18) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:19) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- EXECUTION TIME:
1.27331
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 12
    print(n)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:21) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- EXECUTION TIME:
0.643535
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 12
    print(n)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:24) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- EXECUTION TIME:
0.668884
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 12
    print(n)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:25) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:26) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
print(n)
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:12:23) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=i
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:12:32) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=i
print()
-- EXECUTION TIME:
0.809746
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:13:09) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:13:20) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=i
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:13:32) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=i
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:13:36) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=i
print(n)
-- EXECUTION TIME:
0.898714
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:09) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		k=n
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:21) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
k=n
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:15:31) 
-- CODE:
from numpy import* 
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for elemento in f:
	if elemento >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
k=n
print(k)
-- EXECUTION TIME:
0.760197
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
